--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node ./dist/index.js",
+    "build": "tsc -b",                       
+    "start": "node ./dist/index.js",         
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
